<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#fff224"

    >
    <TextView
        android:id="@+id/num1_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/input_first"
        />

    <EditText
        android:id="@+id/num1_edit_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="number"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/operation_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/input_operation"
        />

    <EditText
        android:id="@+id/operation_edit_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="text"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/num2_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/input_second"
        />

    <EditText
        android:id="@+id/num2_edit_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="number"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/btnCalculateResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"

        />

</LinearLayout>